echantillon gatsbi static/edit